--- a/items/templates/items/upload.html
+++ b/items/templates/items/upload.html
@@ -71,18 +71,29 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
-        const map = L.map('map').setView([23.2599, 77.4126], 13);
+        // Default map center (can be changed as needed)
+        const defaultLat = 23.2599;
+        const defaultLng = 77.4126;
+        const map = L.map('map').setView([defaultLat, defaultLng], 13);
         L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/dark_all/{z}/{x}/{y}{r}.png').addTo(map);
-        let marker = L.marker([23.2599, 77.4126], { draggable: true }).addTo(map);
-        
+        let marker = L.marker([defaultLat, defaultLng], { draggable: true }).addTo(map);
+
         function update(lt, lg) {
             document.getElementById('lat').value = lt.toFixed(6);
             document.getElementById('lng').value = lg.toFixed(6);
         }
-        update(23.2599, 77.4126);
+        // Set initial values
+        update(defaultLat, defaultLng);
 
-        marker.on('dragend', (e) => update(e.target.getLatLng().lat, e.target.getLatLng().lng));
-        map.on('click', (e) => { marker.setLatLng(e.latlng); update(e.latlng.lat, e.latlng.lng); });
+        marker.on('dragend', (e) => {
+            const pos = e.target.getLatLng();
+            update(pos.lat, pos.lng);
+        });
+        map.on('click', (e) => {
+            marker.setLatLng(e.latlng);
+            update(e.latlng.lat, e.latlng.lng);
+        });
+        // No geolocation or auto-location code is present
     </script>
 </body>
 </html>
